--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+
+ h1 {
+    align-items: center;
+    font-size: large;
+    color: rgb(43, 46, 47);
+    background: #d9570b; 
+ }
